--- a/MainBoardODR/MainBoardODR.ioc
+++ b/MainBoardODR/MainBoardODR.ioc
@@ -24,16 +24,28 @@ Mcu.IP1=ADC2
 Mcu.IP2=I2C1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IPNb=6
+Mcu.IP5=RTC
+Mcu.IP6=SYS
+Mcu.IP7=TIM1
+Mcu.IPNb=8
 Mcu.Name=STM32F334K(4-6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PA0
 Mcu.Pin1=PA4
-Mcu.Pin2=PB6
-Mcu.Pin3=PB7
-Mcu.Pin4=VP_SYS_VS_Systick
-Mcu.PinsNb=5
+Mcu.Pin10=VP_RTC_VS_RTC_Activate
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin14=VP_TIM1_VS_no_output1
+Mcu.Pin2=PB1
+Mcu.Pin3=PA13
+Mcu.Pin4=PA14
+Mcu.Pin5=PA15
+Mcu.Pin6=PB3
+Mcu.Pin7=PB4
+Mcu.Pin8=PB6
+Mcu.Pin9=PB7
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F334K8Tx
@@ -54,17 +66,43 @@ PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=ADC_1
 PA0.Mode=IN1-Single-Ended
 PA0.Signal=ADC1_IN1
+PA13.GPIOParameters=GPIO_Label
+PA13.GPIO_Label=JTAG_JTMS
+PA13.Locked=true
+PA13.Mode=JTAG_5_pins
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.GPIOParameters=GPIO_Label
+PA14.GPIO_Label=JTAG_JTCLK
+PA14.Locked=true
+PA14.Mode=JTAG_5_pins
+PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=JTAG_JIDI
+PA15.Locked=true
+PA15.Mode=JTAG_5_pins
+PA15.Signal=SYS_JTDI
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=ADC_2
 PA4.Mode=IN1-Single-Ended
 PA4.Signal=ADC2_IN1
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=GPIO_TEST
+PB1.Locked=true
+PB1.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=JTAG_JIDO
+PB3.Locked=true
+PB3.Mode=JTAG_5_pins
+PB3.Signal=SYS_JTDO-TRACESWO
+PB4.Mode=JTAG_5_pins
+PB4.Signal=SYS_NJTRST
 PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=SCL
+PB6.GPIO_Label=I2C_SCL
 PB6.Locked=true
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=SDA
+PB7.GPIO_Label=I2C_SDA
 PB7.Locked=true
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
@@ -103,7 +141,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADC12outputFreq_Value=16000000
 RCC.AHBFreq_Value=8000000
 RCC.APB1Freq_Value=8000000
@@ -126,7 +164,17 @@ RCC.SYSCLKFreq_VALUE=8000000
 RCC.TIM2Freq_Value=8000000
 RCC.USART1Freq_Value=8000000
 RCC.VCOOutput2Freq_Value=4000000
+TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM1.IPParameters=Channel-Output Compare1 No Output
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM1_VS_ClockSourceITR.Mode=TriggerSource_ITR0
+VP_TIM1_VS_ClockSourceITR.Signal=TIM1_VS_ClockSourceITR
+VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
 board=custom
 isbadioc=false
