--- a/MainBoardODR/MainBoardODR.ioc
+++ b/MainBoardODR/MainBoardODR.ioc
@@ -1,57 +1,81 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.IPParameters=SubFamily,Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.ContinuousConvMode=ENABLE
+ADC1.DMAContinuousRequests=ENABLE
+ADC1.IPParameters=SubFamily,Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests
 ADC1.NbrOfConversionFlag=1
 ADC1.Offset-0\#ChannelRegularConversion=0
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_19CYCLES_5
 ADC1.SubFamily=STM32F334x8
 ADC1.master=1
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC2.IPParameters=SubFamily,Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.ContinuousConvMode=ENABLE
+ADC2.DMAContinuousRequests=ENABLE
+ADC2.IPParameters=SubFamily,Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests
 ADC2.NbrOfConversionFlag=1
 ADC2.Offset-0\#ChannelRegularConversion=0
 ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_19CYCLES_5
 ADC2.SubFamily=STM32F334x8
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.Instance=DMA1_Channel1
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.ADC2.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC2.1.Instance=DMA1_Channel2
+Dma.ADC2.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC2.1.MemInc=DMA_MINC_ENABLE
+Dma.ADC2.1.Mode=DMA_CIRCULAR
+Dma.ADC2.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC2.1.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC2.1.Priority=DMA_PRIORITY_LOW
+Dma.ADC2.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=ADC1
+Dma.Request1=ADC2
+Dma.RequestsNb=2
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F3
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP2=I2C1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=RTC
-Mcu.IP6=SYS
-Mcu.IP7=TIM1
-Mcu.IPNb=8
+Mcu.IP2=DMA
+Mcu.IP3=I2C1
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=RTC
+Mcu.IP7=SYS
+Mcu.IP8=TIM1
+Mcu.IPNb=9
 Mcu.Name=STM32F334K(4-6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PA0
 Mcu.Pin1=PA4
-Mcu.Pin10=VP_RTC_VS_RTC_Activate
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin13=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin14=VP_TIM1_VS_no_output1
-Mcu.Pin2=PB1
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=PA15
-Mcu.Pin6=PB3
-Mcu.Pin7=PB4
-Mcu.Pin8=PB6
-Mcu.Pin9=PB7
-Mcu.PinsNb=15
+Mcu.Pin10=VP_TIM1_VS_no_output1
+Mcu.Pin2=PA13
+Mcu.Pin3=PA14
+Mcu.Pin4=PB6
+Mcu.Pin5=PB7
+Mcu.Pin6=VP_RTC_VS_RTC_Activate
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.Pin8=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin9=VP_TIM1_VS_ClockSourceITR
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F334K8Tx
 MxCube.Version=5.5.0
 MxDb.Version=DB.5.0.50
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -69,33 +93,17 @@ PA0.Signal=ADC1_IN1
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=JTAG_JTMS
 PA13.Locked=true
-PA13.Mode=JTAG_5_pins
+PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.GPIOParameters=GPIO_Label
 PA14.GPIO_Label=JTAG_JTCLK
 PA14.Locked=true
-PA14.Mode=JTAG_5_pins
+PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA15.GPIOParameters=GPIO_Label
-PA15.GPIO_Label=JTAG_JIDI
-PA15.Locked=true
-PA15.Mode=JTAG_5_pins
-PA15.Signal=SYS_JTDI
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=ADC_2
 PA4.Mode=IN1-Single-Ended
 PA4.Signal=ADC2_IN1
-PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=GPIO_TEST
-PB1.Locked=true
-PB1.Signal=GPIO_Output
-PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=JTAG_JIDO
-PB3.Locked=true
-PB3.Mode=JTAG_5_pins
-PB3.Signal=SYS_JTDO-TRACESWO
-PB4.Mode=JTAG_5_pins
-PB4.Signal=SYS_NJTRST
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=I2C_SCL
 PB6.Locked=true
@@ -133,7 +141,7 @@ ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=
+ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=MainBoardODR.ioc
 ProjectManager.ProjectName=MainBoardODR
@@ -142,27 +150,36 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true
-RCC.ADC12outputFreq_Value=16000000
-RCC.AHBFreq_Value=8000000
-RCC.APB1Freq_Value=8000000
-RCC.APB2Freq_Value=8000000
-RCC.CortexFreq_Value=8000000
+RCC.ADC12outputFreq_Value=48000000
+RCC.AHBFreq_Value=48000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=24000000
+RCC.APB1TimFreq_Value=48000000
+RCC.APB2Freq_Value=48000000
+RCC.APB2TimFreq_Value=48000000
+RCC.CortexFreq_Value=48000000
+RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=48000000
+RCC.HRTIM1Freq_Value=48000000
 RCC.HSEPLLFreq_Value=8000000
 RCC.HSE_VALUE=8000000
 RCC.HSIPLLFreq_Value=4000000
 RCC.HSI_VALUE=8000000
 RCC.I2C1Freq_Value=8000000
-RCC.IPParameters=ADC12outputFreq_Value,AHBFreq_Value,APB1Freq_Value,APB2Freq_Value,CortexFreq_Value,FamilyName,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,LSI_VALUE,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,TIM2Freq_Value,USART1Freq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=ADC12outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HRTIM1Freq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,USART1Freq_Value,VCOOutput2Freq_Value
 RCC.LSI_VALUE=40000
-RCC.PLLCLKFreq_Value=16000000
-RCC.PLLMCOFreq_Value=16000000
-RCC.PLLMUL=RCC_PLL_MUL4
+RCC.MCOFreq_Value=48000000
+RCC.PLLCLKFreq_Value=48000000
+RCC.PLLMCOFreq_Value=48000000
+RCC.PLLMUL=RCC_PLL_MUL12
 RCC.RTCFreq_Value=40000
 RCC.RTCHSEDivFreq_Value=250000
-RCC.SYSCLKFreq_VALUE=8000000
-RCC.TIM2Freq_Value=8000000
-RCC.USART1Freq_Value=8000000
+RCC.SYSCLKFreq_VALUE=48000000
+RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
+RCC.TIM1Freq_Value=48000000
+RCC.TIM2Freq_Value=48000000
+RCC.USART1Freq_Value=24000000
 RCC.VCOOutput2Freq_Value=4000000
 TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-Output Compare1 No Output
