--- a/MainBoardODR/MainBoardODR.ioc
+++ b/MainBoardODR/MainBoardODR.ioc
@@ -1,47 +1,48 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC1.ContinuousConvMode=ENABLE
-ADC1.DMAContinuousRequests=ENABLE
-ADC1.IPParameters=SubFamily,Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,SubFamily
 ADC1.NbrOfConversionFlag=1
-ADC1.Offset-0\#ChannelRegularConversion=0
-ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_19CYCLES_5
+ADC1.Offset-1\#ChannelRegularConversion=0
+ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-1\#ChannelRegularConversion=1
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.SubFamily=STM32F334x8
 ADC1.master=1
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC2.ContinuousConvMode=ENABLE
-ADC2.DMAContinuousRequests=ENABLE
-ADC2.IPParameters=SubFamily,Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests
+ADC2.IPParameters=SubFamily,Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode
 ADC2.NbrOfConversionFlag=1
 ADC2.Offset-0\#ChannelRegularConversion=0
 ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_19CYCLES_5
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC2.SubFamily=STM32F334x8
-Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.0.Instance=DMA1_Channel1
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.0.Mode=DMA_CIRCULAR
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
-Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.ADC2.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC2.1.Instance=DMA1_Channel2
-Dma.ADC2.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC2.1.MemInc=DMA_MINC_ENABLE
-Dma.ADC2.1.Mode=DMA_CIRCULAR
-Dma.ADC2.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC2.1.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC2.1.Priority=DMA_PRIORITY_LOW
-Dma.ADC2.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.Request0=ADC1
-Dma.Request1=ADC2
+Dma.ADC1.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.1.Instance=DMA1_Channel1
+Dma.ADC1.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.1.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.1.Mode=DMA_CIRCULAR
+Dma.ADC1.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.1.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.1.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.ADC2.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC2.0.Instance=DMA1_Channel2
+Dma.ADC2.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC2.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC2.0.Mode=DMA_CIRCULAR
+Dma.ADC2.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC2.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC2.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC2.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.Request0=ADC2
+Dma.Request1=ADC1
 Dma.RequestsNb=2
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
+I2C1.IPParameters=OwnAddress
+I2C1.OwnAddress=23
 KeepUserPlacement=false
 Mcu.Family=STM32F3
 Mcu.IP0=ADC1
@@ -53,26 +54,49 @@ Mcu.IP5=RCC
 Mcu.IP6=RTC
 Mcu.IP7=SYS
 Mcu.IP8=TIM1
-Mcu.IPNb=9
+Mcu.IP9=TIM2
+Mcu.IPNb=10
 Mcu.Name=STM32F334K(4-6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PA0
-Mcu.Pin1=PA4
-Mcu.Pin10=VP_TIM1_VS_no_output1
-Mcu.Pin2=PA13
-Mcu.Pin3=PA14
-Mcu.Pin4=PB6
-Mcu.Pin5=PB7
-Mcu.Pin6=VP_RTC_VS_RTC_Activate
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.Pin8=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin9=VP_TIM1_VS_ClockSourceITR
-Mcu.PinsNb=11
+Mcu.Pin1=PA1
+Mcu.Pin10=PA8
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA11
+Mcu.Pin14=PA12
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PA15
+Mcu.Pin18=PB3
+Mcu.Pin19=PB4
+Mcu.Pin2=PA2
+Mcu.Pin20=PB5
+Mcu.Pin21=PB6
+Mcu.Pin22=PB7
+Mcu.Pin23=VP_RTC_VS_RTC_Activate
+Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin25=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin26=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin27=VP_TIM1_VS_no_output1
+Mcu.Pin28=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM2_VS_no_output1
+Mcu.Pin3=PA3
+Mcu.Pin30=VP_TIM2_VS_no_output2
+Mcu.Pin31=VP_TIM2_VS_no_output3
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F334K8Tx
 MxCube.Version=5.5.0
 MxDb.Version=DB.5.0.50
+NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
@@ -85,25 +109,103 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0.GPIOParameters=GPIO_Label
-PA0.GPIO_Label=ADC_1
+PA0.GPIO_Label=MUX_OUT
 PA0.Mode=IN1-Single-Ended
 PA0.Signal=ADC1_IN1
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=MUX_SELECT_2
+PA1.Locked=true
+PA1.Signal=GPIO_Output
+PA10.GPIOParameters=GPIO_Label
+PA10.GPIO_Label=MOTOR_IN_3_2
+PA10.Locked=true
+PA10.Signal=GPIO_Output
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=MOTOR_IN_3_1
+PA11.Locked=true
+PA11.Signal=GPIO_Output
+PA12.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA12.GPIO_Label=BUMPER
+PA12.GPIO_PuPd=GPIO_PULLUP
+PA12.Locked=true
+PA12.Signal=GPIO_Input
 PA13.GPIOParameters=GPIO_Label
-PA13.GPIO_Label=JTAG_JTMS
+PA13.GPIO_Label=SWDIO
 PA13.Locked=true
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.GPIOParameters=GPIO_Label
-PA14.GPIO_Label=JTAG_JTCLK
+PA14.GPIO_Label=SWCLK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Label
+PA15.GPIO_Label=MOTOR_IN_1_2
+PA15.Locked=true
+PA15.Signal=GPIO_Output
+PA2.GPIOParameters=GPIO_Label
+PA2.GPIO_Label=MUX_SELECT_1
+PA2.Locked=true
+PA2.Signal=GPIO_Output
+PA3.GPIOParameters=GPIO_Label
+PA3.GPIO_Label=MUX_SELECT_3
+PA3.Locked=true
+PA3.Signal=GPIO_Output
 PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=ADC_2
+PA4.GPIO_Label=SENSOR
 PA4.Mode=IN1-Single-Ended
 PA4.Signal=ADC2_IN1
+PA5.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA5.GPIO_Label=ENCODER_B3
+PA5.GPIO_PuPd=GPIO_PULLUP
+PA5.Locked=true
+PA5.Signal=GPIO_Input
+PA6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA6.GPIO_Label=ENCODER_A2
+PA6.GPIO_PuPd=GPIO_PULLUP
+PA6.Locked=true
+PA6.Signal=GPIO_Input
+PA7.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA7.GPIO_Label=ENCODER_B2
+PA7.GPIO_PuPd=GPIO_PULLUP
+PA7.Locked=true
+PA7.Signal=GPIO_Input
+PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA8.GPIO_Label=ENCODER_A3
+PA8.GPIO_PuPd=GPIO_PULLUP
+PA8.Locked=true
+PA8.Signal=GPIO_Input
+PA9.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA9.GPIO_Label=STATUS
+PA9.GPIO_PuPd=GPIO_PULLUP
+PA9.Locked=true
+PA9.Signal=GPIO_Input
+PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB0.GPIO_Label=ENCODER_A1
+PB0.GPIO_PuPd=GPIO_PULLUP
+PB0.Locked=true
+PB0.Signal=GPIO_Input
+PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB1.GPIO_Label=ENCODER_B1
+PB1.GPIO_PuPd=GPIO_PULLUP
+PB1.Locked=true
+PB1.Signal=GPIO_Input
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=MOTOR_IN_1_1
+PB3.Locked=true
+PB3.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Label
+PB4.GPIO_Label=MOTOR_IN_2_2
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=MOTOR_IN_2_1
+PB5.Locked=true
+PB5.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=I2C_SCL
 PB6.Locked=true
@@ -114,16 +216,8 @@ PB7.GPIO_Label=I2C_SDA
 PB7.Locked=true
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
-PCC.Checker=false
-PCC.Line=STM32F334
-PCC.MCU=STM32F334K(4-6-8)Tx
-PCC.PartNumber=STM32F334K8Tx
-PCC.Seq0=0
-PCC.Series=STM32F3
-PCC.Temperature=25
-PCC.Vdd=3.6
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
+ProjectManager.AskForMigrate=false
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
@@ -141,7 +235,7 @@ ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=STM32CubeIDE
+ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=MainBoardODR.ioc
 ProjectManager.ProjectName=MainBoardODR
@@ -149,7 +243,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADC12outputFreq_Value=48000000
 RCC.AHBFreq_Value=48000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -181,8 +275,14 @@ RCC.TIM1Freq_Value=48000000
 RCC.TIM2Freq_Value=48000000
 RCC.USART1Freq_Value=24000000
 RCC.VCOOutput2Freq_Value=4000000
-TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
-TIM1.IPParameters=Channel-Output Compare1 No Output
+TIM1.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
+TIM1.IPParameters=Channel-PWM Generation1 No Output
+TIM2.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
+TIM2.Channel-PWM\ Generation2\ No\ Output=TIM_CHANNEL_2
+TIM2.Channel-PWM\ Generation3\ No\ Output=TIM_CHANNEL_3
+TIM2.IPParameters=Channel-PWM Generation1 No Output,Channel-PWM Generation2 No Output,Channel-PWM Generation3 No Output,Prescaler,Period
+TIM2.Period=100
+TIM2.Prescaler=48
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
 VP_SYS_VS_Systick.Mode=SysTick
@@ -191,7 +291,15 @@ VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceITR.Mode=TriggerSource_ITR0
 VP_TIM1_VS_ClockSourceITR.Signal=TIM1_VS_ClockSourceITR
-VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM1_VS_no_output1.Mode=PWM Generation1 No Output
 VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM2_VS_no_output1.Mode=PWM Generation1 No Output
+VP_TIM2_VS_no_output1.Signal=TIM2_VS_no_output1
+VP_TIM2_VS_no_output2.Mode=PWM Generation2 No Output
+VP_TIM2_VS_no_output2.Signal=TIM2_VS_no_output2
+VP_TIM2_VS_no_output3.Mode=PWM Generation3 No Output
+VP_TIM2_VS_no_output3.Signal=TIM2_VS_no_output3
 board=custom
 isbadioc=false
