--- a/MainBoardODR/MainBoardODR.ioc
+++ b/MainBoardODR/MainBoardODR.ioc
@@ -1,44 +1,24 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.ContinuousConvMode=ENABLE
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Offset-1\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,SubFamily
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
+ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,Offset-2\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,SubFamily
 ADC1.NbrOfConversionFlag=1
-ADC1.Offset-1\#ChannelRegularConversion=0
-ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.Rank-1\#ChannelRegularConversion=1
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.Offset-2\#ChannelRegularConversion=0
+ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-2\#ChannelRegularConversion=1
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
 ADC1.SubFamily=STM32F334x8
 ADC1.master=1
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC2.ContinuousConvMode=ENABLE
-ADC2.IPParameters=SubFamily,Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode
+ADC2.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
+ADC2.ContinuousConvMode=DISABLE
+ADC2.IPParameters=SubFamily,Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,Offset-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,ClockPrescaler
 ADC2.NbrOfConversionFlag=1
 ADC2.Offset-0\#ChannelRegularConversion=0
 ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_61CYCLES_5
 ADC2.SubFamily=STM32F334x8
-Dma.ADC1.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.1.Instance=DMA1_Channel1
-Dma.ADC1.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.1.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.1.Mode=DMA_CIRCULAR
-Dma.ADC1.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC1.1.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.1.Priority=DMA_PRIORITY_LOW
-Dma.ADC1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.ADC2.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC2.0.Instance=DMA1_Channel2
-Dma.ADC2.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC2.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC2.0.Mode=DMA_CIRCULAR
-Dma.ADC2.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC2.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC2.0.Priority=DMA_PRIORITY_LOW
-Dma.ADC2.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.Request0=ADC2
-Dma.Request1=ADC1
-Dma.RequestsNb=2
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=OwnAddress
@@ -47,15 +27,14 @@ KeepUserPlacement=false
 Mcu.Family=STM32F3
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP2=DMA
-Mcu.IP3=I2C1
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=RTC
-Mcu.IP7=SYS
-Mcu.IP8=TIM1
-Mcu.IP9=TIM2
-Mcu.IPNb=10
+Mcu.IP2=I2C1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=RTC
+Mcu.IP6=SYS
+Mcu.IP7=TIM1
+Mcu.IP8=TIM2
+Mcu.IPNb=9
 Mcu.Name=STM32F334K(4-6-8)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PA0
@@ -98,8 +77,6 @@ MxCube.Version=5.5.0
 MxDb.Version=DB.5.0.50
 NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -243,7 +220,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.ADC12outputFreq_Value=48000000
 RCC.AHBFreq_Value=48000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -302,4 +279,3 @@ VP_TIM2_VS_no_output2.Signal=TIM2_VS_no_output2
 VP_TIM2_VS_no_output3.Mode=PWM Generation3 No Output
 VP_TIM2_VS_no_output3.Signal=TIM2_VS_no_output3
 board=custom
-isbadioc=false
