--- a/MainBoardODR/MainBoardODR.ioc
+++ b/MainBoardODR/MainBoardODR.ioc
@@ -78,6 +78,7 @@ MxDb.Version=DB.5.0.50
 NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.EXTI15_10_IRQn=true\:1\:0\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -105,11 +106,12 @@ PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=MOTOR_IN_3_1
 PA11.Locked=true
 PA11.Signal=GPIO_Output
-PA12.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA12.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA12.GPIO_Label=BUMPER
+PA12.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA12.GPIO_PuPd=GPIO_PULLUP
 PA12.Locked=true
-PA12.Signal=GPIO_Input
+PA12.Signal=GPXTI12
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=SWDIO
 PA13.Locked=true
@@ -252,6 +254,8 @@ RCC.TIM1Freq_Value=48000000
 RCC.TIM2Freq_Value=48000000
 RCC.USART1Freq_Value=24000000
 RCC.VCOOutput2Freq_Value=4000000
+SH.GPXTI12.0=GPIO_EXTI12
+SH.GPXTI12.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-PWM Generation1 No Output
 TIM2.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
@@ -279,3 +283,4 @@ VP_TIM2_VS_no_output2.Signal=TIM2_VS_no_output2
 VP_TIM2_VS_no_output3.Mode=PWM Generation3 No Output
 VP_TIM2_VS_no_output3.Signal=TIM2_VS_no_output3
 board=custom
+isbadioc=false
