--- a/MainBoardODR/MainBoardODR.ioc
+++ b/MainBoardODR/MainBoardODR.ioc
@@ -79,7 +79,10 @@ MxDb.Version=DB.5.0.50
 NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI15_10_IRQn=true\:1\:0\:true\:false\:true\:true\:true
+NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -88,6 +91,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM1_CC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -139,41 +143,35 @@ PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=SENSOR
 PA4.Mode=IN1-Single-Ended
 PA4.Signal=ADC2_IN1
-PA5.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=ENCODER_B3
-PA5.GPIO_PuPd=GPIO_PULLUP
 PA5.Locked=true
-PA5.Signal=GPIO_Input
-PA6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA5.Signal=GPXTI5
+PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=ENCODER_A2
-PA6.GPIO_PuPd=GPIO_PULLUP
 PA6.Locked=true
-PA6.Signal=GPIO_Input
-PA7.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA6.Signal=GPXTI6
+PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=ENCODER_B2
-PA7.GPIO_PuPd=GPIO_PULLUP
 PA7.Locked=true
-PA7.Signal=GPIO_Input
-PA8.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA7.Signal=GPXTI7
+PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=ENCODER_A3
-PA8.GPIO_PuPd=GPIO_PULLUP
 PA8.Locked=true
-PA8.Signal=GPIO_Input
+PA8.Signal=GPXTI8
 PA9.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA9.GPIO_Label=STATUS
 PA9.GPIO_PuPd=GPIO_PULLUP
 PA9.Locked=true
 PA9.Signal=GPIO_Input
-PB0.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=ENCODER_A1
-PB0.GPIO_PuPd=GPIO_PULLUP
 PB0.Locked=true
-PB0.Signal=GPIO_Input
-PB1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PB0.Signal=GPXTI0
+PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=ENCODER_B1
-PB1.GPIO_PuPd=GPIO_PULLUP
 PB1.Locked=true
-PB1.Signal=GPIO_Input
+PB1.Signal=GPXTI1
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-TRACESWO
 PB4.GPIOParameters=GPIO_Label
@@ -225,7 +223,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM15_Init-TIM15-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADC12outputFreq_Value=48000000
 RCC.AHBFreq_Value=48000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -257,11 +255,23 @@ RCC.TIM1Freq_Value=48000000
 RCC.TIM2Freq_Value=48000000
 RCC.USART1Freq_Value=24000000
 RCC.VCOOutput2Freq_Value=4000000
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
 SH.GPXTI12.0=GPIO_EXTI12
 SH.GPXTI12.ConfNb=1
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI7.0=GPIO_EXTI7
+SH.GPXTI7.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-PWM Generation1 No Output,Prescaler,Period
-TIM1.Period=6500
+TIM1.Period=1000
 TIM1.Prescaler=48
 TIM2.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
 TIM2.IPParameters=Channel-PWM Generation1 No Output,Prescaler,Period
